# docstring-extractor

./: README.md  docstring_extractor.py  pyproject.toml
.github/workflows/: publish.yaml  tests.yaml
canonicalwebteam/docstring_extractor/: __init__.py
